# pyre

./: LICENSE  README.md  TODO.md  data.json  dfpy.py  pyproject.toml  pyre.py  requirements.txt  setup.py  tags.py  util.py
dfpyre/: __init__.py  action_literals.py  actiondump.py  codeblock.py  items.py  pyre.py  scriptgen.py  slice.py  style.py  util.py
dfpyre/core/: actiondump.py  codeblock.py  items.py  template.py
dfpyre/data/: actiondump_min.json  data.json  deprecated_actions.json  subactions.json
dfpyre/data/method_templates/: event.txt  notarget_action.txt  repeat_while.txt  select_obj_subaction.txt
dfpyre/data/particle_class/: particle_class_template.py  particle_method.txt
dfpyre/data/script_templates/: conditional.txt
dfpyre/export/: action_classes.py  block_functions.py  particle_item.py
dfpyre/scripts/: action_gen.py  action_literal_gen.py  particle_gen.py
dfpyre/tool/: scriptgen.py  slice.py
dfpyre/util/: codeitem.py  util.py
examples/: function_parameters.py  if_variable.py  repeat.py  say_hi.py  var_shorthand.py
extra/: action_literal_gen.py
scripts/: action_gen.py  action_literal_gen.py
scripts/script_templates/: action.txt  notarget_conditional.txt  repeat.txt  select_obj.txt
tests/: test_basic.py
