[tool.poetry]
name = "dfpyre"
version = "0.5.0"
description = "A package for external creation of code templates for the DiamondFire Minecraft server."
authors = ["Amp"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/Amp63/pyre"
keywords = ["diamondfire", "minecraft", "template", "item"]
exclude = ['examples']


[tool.poetry.dependencies]
python = "^3.10"
mcitemlib = "^0.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
