[tool.poetry]
name = "dfpyre"
version = "0.8.14"
description = "A package for creating and modifying code templates for the DiamondFire Minecraft server."
authors = ["Amp"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/Amp63/pyre"
keywords = ["diamondfire", "minecraft", "template", "item"]
exclude = ['examples', 'extra']


[tool.poetry.dependencies]
python = "^3.10"
mcitemlib = "^0.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
