[project]
name = "dfpyre"
version = "0.10.0"
description = "A package for creating and modifying code templates for the DiamondFire Minecraft server."
authors = [
    {name = "Amp"}
]
license = "MIT"
readme = "README.md"
keywords = ["diamondfire", "minecraft", "template", "item"]

requires-python = ">=3.10"
dependencies = [
    "mcitemlib>=0.5.2",
    "rapidnbt>=1.3.5",
    "websocket-client>=1.9.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "twine>=6.2.0"
]


[project.urls]
Repository = "https://github.com/Amp63/pyre"


[tool.poetry]
exclude = ['examples', 'scripts']


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
